@@ -90,6 +90,7 @@ PHP                                                                        NEWS
 - Fixed bug #38003 (in classes inherited from MySQLi it's possible to call 
   private constructors from invalid context). (Tony)
 - Fixed bug #37987 (invalid return of file_exists() in safe mode). (Ilia)
+- Fixed bug #37947 (zend_ptr_stack reallocation problem). (Dmitry)
 - Fixed bug #37931 (possible crash in OCI8 after database restart 
   when using persistent connections). (Tony)
 - Fixed bug #37920 (compilation problems on z/OS). (Tony)
